[package]
name = "all-chimie-game-server"
edition = "2021"
version = "0.0.1"

[dependencies]
serde_json = "1.0.95"
ws = "0.9.2"
actix-web = "4.3.1"
actix-files = "0.6.2"
env_logger = "0.10.0"
console = "0.15.5"
geo = "0.24.1"
strum = "0.24"
strum_macros = "0.24"

[dependencies.serde]
version = "1.0.158"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]
